# old-rust-multiplatform

./: .gitignore  README.md  justfile
.cursor/rules/: rust-multiplatform.mdc
android/: .gitignore
android/app/: build.gradle.kts
android/app/src/main/java/com/example/counter/: Counter.kt  CounterApp.kt  Database.kt  MainActivity.kt  Timer.kt  ViewModel.kt  db.kt
android/app/src/main/java/tech/forgen/todolist/rust/uniffi/counter/: counter.kt
ios/Counter/: AppNavigation.swift  ContentView.swift  CounterApp.swift  CounterView.swift  Database.swift  Timer.swift  ViewModel.swift
ios/Counter.xcodeproj/: project.pbxproj
ios/Counter.xcodeproj/project.xcworkspace/xcuserdata/justin.xcuserdatad/: UserInterfaceState.xcuserstate
rust/: Cargo.toml
rust-multiplatform/src/: generated_code_template.rs  lib.rs  macros.rs  tests.rs  utils.rs
rust-multiplatform/src/traits/: mod.rs
rust/src/: app.rs  cdk_integration_tests.rs  database.rs  db.rs  ffi.rs  lib.rs  navigation.rs  tests.rs  updater.rs  view_model.rs  wallet.rs  wasm.rs
scripts/: build-android.sh  build-ios.sh  run-android.sh  run-ios.sh  run-tests.sh
