[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "counter"

[dependencies]
crossbeam = "0.8.4"
once_cell = "1.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
uniffi = { version = "0.27.2", features = ["cli"] }
wasm-bindgen = "0.2.92"

# [build-dependencies]
# uniffi = { version = "0.27.2", features = ["build"] }
