[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "counter"

[dependencies]
crossbeam = "0.8.4"
once_cell = "1.19.0"
uniffi = { version = "0.27.2", features = ["cli"] }
android_logger = "0.10"
log = "0.4"
sqlite-watcher = { git = "https://github.com/justinmoon/sqlite-watcher", features = [
    "rusqlite",
] }

# FIXME: only using bundled b/c ndk couldn't link sqlite
# libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
# rusqlite = { version = "0.33.0", features = ["bundled", "hooks"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
